Criação do serviço de coneção, Migrations e criação do Banco

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
 
   "ConnectionStrings": {
-    "ConexaoPadrao" : "Server=(localdb)\\mssqllocaldb;Database=Vendas;Integrated Security=True; TrustServerCertificate=Yes"
+    "ConexaoPadrao" : "Server=(localdb)\\mssqllocaldb;Database=ApiEnderecos;Integrated Security=True; TrustServerCertificate=Yes"
   }
 }
